--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,17 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="author" content="Kade Tyler" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Kade Tyler is a graphic designer specializing in thoughtful visual identities and custom lettering."
     />
+    <meta property="og:image" content="%PUBLIC_URL%/about/03_approach.jpg" />
+    <meta
+      property="og:description"
+      content="Kade Tyler is a graphic designer specializing in thoughtful visual identities and custom lettering."
+    />
+    <meta property="og:title" content="ktype" />
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -33,7 +40,7 @@
       href="https://fonts.googleapis.com/css?family=PT+Serif&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>ktype</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
