mobilemenu, favicon, metaphoto

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       name="description"
       content="Kade Tyler is a graphic designer specializing in thoughtful visual identities and custom lettering."
     />
-    <meta property="og:image" content="%PUBLIC_URL%/about/03_approach.jpg" />
+    <meta property="og:image" content="%PUBLIC_URL%/meta.jpg" />
     <meta
       property="og:description"
       content="Kade Tyler is a graphic designer specializing in thoughtful visual identities and custom lettering."
