--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,15 @@
       rel="stylesheet"
     />
     <link
+      href="https://fonts.googleapis.com/css?family=Josefin+Sans:700|PT+Serif:700&display=swap"
+      rel="stylesheet"
+    />
+    <link
       href="https://fonts.googleapis.com/css?family=PT+Serif&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=PT+Serif:700&display=swap"
       rel="stylesheet"
     />
     <title>ktype</title>
