ssl redirect attempt

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,6 +16,7 @@
       content="Kade Tyler is a graphic designer specializing in thoughtful visual identities and custom lettering."
     />
     <meta property="og:title" content="ktype" />
+    <meta http-equiv="REFRESH" content="0;URL=https://www.ktype.xyz" />
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
