--- a/client/public/index.html
+++ b/client/public/index.html
@@ -48,7 +48,7 @@
       href="https://fonts.googleapis.com/css?family=PT+Serif:700&display=swap"
       rel="stylesheet"
     />
-    <title>ktype</title>
+    <title>ktype • Custom Lettering & Branding Design</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
