--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <!--
   
 SITE MADE IN COLLABORATION WITH
@@ -14,8 +15,6 @@ and building the framework of this site!
 ❤
 
 -->
-
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <!-- META -->
@@ -33,7 +32,7 @@ and building the framework of this site!
       content="KTYPE is the independent graphic design studio of Kade Tyler.
     Thoughtful Brand Identities &amp; Custom Type."
     />
-    <meta property="og:image" content="%PUBLIC_URL%/meta.jpg" />
+    <meta property="og:image" content="%PUBLIC_URL%/meta.png" />
     <meta property="og:url" content="https://www.ktype.xyz/" />
     <meta name="author" content="Kade Tyler" />
 
