dynamic footer, better project layout, typeface

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,20 +1,4 @@
 <!DOCTYPE html>
-<!--
-  
-SITE MADE IN COLLABORATION WITH
-
-DAR ZACCARO:
-https://www.linkedin.com/in/darzaccaro/
-https://www.linkedin.com/in/darzaccaro/
-https://www.linkedin.com/in/darzaccaro/
-
-Thanks sparking my interest in web development 
-by demonstrating your process, sharing resources, 
-and building the framework of this site!
-
-❤
-
--->
 <html lang="en">
   <head>
     <!-- META -->
@@ -118,10 +102,12 @@ and building the framework of this site!
       href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
 
-    <title>
-      KTYPE | Branding &amp; Custom Type
-    </title>
+    <title>KTYPE | Branding &amp; Custom Type</title>
 
     <!-- SEO -->
     <meta
